--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>viewfix</title>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106929065-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106929065-2');
+    </script>
   </head>
   <body>
     <noscript>
