index.html: added google-site-verification meta

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,6 +15,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     
+    <meta name="google-site-verification" content="hCArZLTZ-DM3XN1U-7lyzFNkKTUtk_Xvp5-V1juMBNs" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
